// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu component should render menu 1`] = `
<DocumentFragment>
  <div
    class="oereb-client-menu d-flex flex-column pb-3"
  >
    <div
      class="flex-grow-1 row justify-content-evenly"
    >
      <div
        class="col"
      >
        <img
          class="img-fluid p-2"
          src="http://localhost:8080/samples/static/logo_oereb_de.png"
        />
      </div>
      <div
        class="col text-end"
      >
        <img
          class="img-fluid p-2"
          src="http://localhost:8080/samples/static/logo_bl.png"
        />
      </div>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="input-group"
      >
        <button
          aria-expanded="false"
          class="btn btn-outline-secondary dropdown-toggle"
          data-bs-toggle="dropdown"
          title="menu.settings.title"
          type="button"
        >
          <i
            class="bi bi-gear-fill"
          />
        </button>
        <ul
          class="dropdown-menu"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <span>
                <i
                  class="bi bi-check-square"
                />
                 menu.settings.availability
              </span>
            </button>
          </li>
          <li>
            <button
              class="dropdown-item"
            >
              <span>
                <i
                  class="bi bi-check-square"
                />
                 menu.settings.symbol_zoom
              </span>
            </button>
          </li>
        </ul>
        <button
          aria-expanded="false"
          class="btn btn-outline-secondary dropdown-toggle disabled"
          data-bs-toggle="dropdown"
          title="menu.history.title"
          type="button"
        >
          <i
            class="bi bi-clock-history"
          />
        </button>
        <ul
          class="dropdown-menu"
        />
        <input
          class="form-control"
          placeholder="menu.search.placeholder"
          type="text"
          value=""
        />
        <button
          class="btn btn-outline-secondary"
          disabled=""
          title="menu.search.reset"
          type="button"
        >
          <i
            class="bi bi-trash"
          />
        </button>
      </div>
    </div>
    <div
      class="container-fluid"
    />
  </div>
</DocumentFragment>
`;

exports[`search should show GNSS coordinates 1`] = `
<DocumentFragment>
  <div
    class="oereb-client-menu d-flex flex-column pb-3"
  >
    <div
      class="flex-grow-1 row justify-content-evenly"
    >
      <div
        class="col"
      >
        <img
          class="img-fluid p-2"
          src="http://localhost:8080/samples/static/logo_oereb_de.png"
        />
      </div>
      <div
        class="col text-end"
      >
        <img
          class="img-fluid p-2"
          src="http://localhost:8080/samples/static/logo_bl.png"
        />
      </div>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="input-group"
      >
        <button
          aria-expanded="false"
          class="btn btn-outline-secondary dropdown-toggle"
          data-bs-toggle="dropdown"
          title="menu.settings.title"
          type="button"
        >
          <i
            class="bi bi-gear-fill"
          />
        </button>
        <ul
          class="dropdown-menu"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <span>
                <i
                  class="bi bi-check-square"
                />
                 menu.settings.availability
              </span>
            </button>
          </li>
          <li>
            <button
              class="dropdown-item"
            >
              <span>
                <i
                  class="bi bi-check-square"
                />
                 menu.settings.symbol_zoom
              </span>
            </button>
          </li>
        </ul>
        <button
          aria-expanded="false"
          class="btn btn-outline-secondary dropdown-toggle disabled"
          data-bs-toggle="dropdown"
          title="menu.history.title"
          type="button"
        >
          <i
            class="bi bi-clock-history"
          />
        </button>
        <ul
          class="dropdown-menu"
        />
        <input
          class="form-control"
          placeholder="menu.search.placeholder"
          type="text"
          value="7.72867 47.48910"
        />
        <button
          class="btn btn-outline-secondary"
          title="menu.search.reset"
          type="button"
        >
          <i
            class="bi bi-trash"
          />
        </button>
      </div>
    </div>
    <div
      class="container-fluid"
    />
  </div>
</DocumentFragment>
`;

exports[`search should show LV95 coordinates 1`] = `
<DocumentFragment>
  <div
    class="oereb-client-menu d-flex flex-column pb-3"
  >
    <div
      class="flex-grow-1 row justify-content-evenly"
    >
      <div
        class="col"
      >
        <img
          class="img-fluid p-2"
          src="http://localhost:8080/samples/static/logo_oereb_de.png"
        />
      </div>
      <div
        class="col text-end"
      >
        <img
          class="img-fluid p-2"
          src="http://localhost:8080/samples/static/logo_bl.png"
        />
      </div>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="input-group"
      >
        <button
          aria-expanded="false"
          class="btn btn-outline-secondary dropdown-toggle"
          data-bs-toggle="dropdown"
          title="menu.settings.title"
          type="button"
        >
          <i
            class="bi bi-gear-fill"
          />
        </button>
        <ul
          class="dropdown-menu"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <span>
                <i
                  class="bi bi-check-square"
                />
                 menu.settings.availability
              </span>
            </button>
          </li>
          <li>
            <button
              class="dropdown-item"
            >
              <span>
                <i
                  class="bi bi-check-square"
                />
                 menu.settings.symbol_zoom
              </span>
            </button>
          </li>
        </ul>
        <button
          aria-expanded="false"
          class="btn btn-outline-secondary dropdown-toggle disabled"
          data-bs-toggle="dropdown"
          title="menu.history.title"
          type="button"
        >
          <i
            class="bi bi-clock-history"
          />
        </button>
        <ul
          class="dropdown-menu"
        />
        <input
          class="form-control"
          placeholder="menu.search.placeholder"
          type="text"
          value="2600000 1200000"
        />
        <button
          class="btn btn-outline-secondary"
          title="menu.search.reset"
          type="button"
        >
          <i
            class="bi bi-trash"
          />
        </button>
      </div>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="list-group result-list"
      >
        <div
          class="list-group-item"
        >
          <strong>
            menu.search.title.coordinates.lv95
          </strong>
          <span
            class="badge bg-secondary float-end"
          >
            1
          </span>
        </div>
        <button
          class="list-group-item list-group-item-action search-result text-start"
        >
          2600000 1200000
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`search should show results 1`] = `
<DocumentFragment>
  <div
    class="oereb-client-menu d-flex flex-column pb-3"
  >
    <div
      class="flex-grow-1 row justify-content-evenly"
    >
      <div
        class="col"
      >
        <img
          class="img-fluid p-2"
          src="http://localhost:8080/samples/static/logo_oereb_de.png"
        />
      </div>
      <div
        class="col text-end"
      >
        <img
          class="img-fluid p-2"
          src="http://localhost:8080/samples/static/logo_bl.png"
        />
      </div>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="input-group"
      >
        <button
          aria-expanded="false"
          class="btn btn-outline-secondary dropdown-toggle"
          data-bs-toggle="dropdown"
          title="menu.settings.title"
          type="button"
        >
          <i
            class="bi bi-gear-fill"
          />
        </button>
        <ul
          class="dropdown-menu"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <span>
                <i
                  class="bi bi-check-square"
                />
                 menu.settings.availability
              </span>
            </button>
          </li>
          <li>
            <button
              class="dropdown-item"
            >
              <span>
                <i
                  class="bi bi-check-square"
                />
                 menu.settings.symbol_zoom
              </span>
            </button>
          </li>
        </ul>
        <button
          aria-expanded="false"
          class="btn btn-outline-secondary dropdown-toggle disabled"
          data-bs-toggle="dropdown"
          title="menu.history.title"
          type="button"
        >
          <i
            class="bi bi-clock-history"
          />
        </button>
        <ul
          class="dropdown-menu"
        />
        <input
          class="form-control"
          placeholder="menu.search.placeholder"
          type="text"
          value="abc"
        />
        <button
          class="btn btn-outline-secondary"
          title="menu.search.reset"
          type="button"
        >
          <i
            class="bi bi-trash"
          />
        </button>
      </div>
    </div>
    <div
      class="container-fluid"
    >
      <div
        class="list-group result-list"
      >
        <div
          class="list-group-item"
        >
          <strong>
            Set 1
          </strong>
          <span
            class="badge bg-secondary float-end"
          >
            2
          </span>
        </div>
        <button
          class="list-group-item list-group-item-action search-result text-start"
        >
          Result 1
        </button>
        <button
          class="list-group-item list-group-item-action search-result text-start"
        >
          Result 2
        </button>
      </div>
      <div
        class="list-group result-list"
      >
        <div
          class="list-group-item"
        >
          <strong>
            Set 2
          </strong>
          <span
            class="badge bg-secondary float-end"
          >
            2
          </span>
        </div>
        <button
          class="list-group-item list-group-item-action search-result text-start"
        >
          Result 3
        </button>
        <button
          class="list-group-item list-group-item-action search-result text-start"
        >
          Result 4
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
